web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/layout/Layout.module.css
.layout {
    display: flex;
    flex-direction: column;
    font-family: 'Mallory', sans-serif;
}

/* Modal */
.modal {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 100vh;
    z-index: 800; /* figure out a lower number, in Drupal this needs to be high */
}

.modal::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: -1;
    background: rgba(0, 69, 120, 0.70);
    background-blend-mode: multiply;
    backdrop-filter: blur(6.843055725097656px);
}

.modalContent {
    background: linear-gradient(120deg, rgba(223,236,249,1) 0%, rgba(255,255,255,1) 35%, rgba(223,236,249,1) 62%, rgba(255,255,255,1) 100%);
    position: fixed;
    top: 0.5rem;
    right: 0.5rem;
    bottom: 0.5rem;
    left: 0.5rem;
    z-index: 1;
    overflow-y: auto;
    display: flex;
    flex-flow: column nowrap;
    gap: 1rem;
    padding: 1rem;
}

@media screen and (min-width:800px) {
    .modalContent {
        top: 2rem;
        right: 2rem;
        bottom: 2rem;
        left: 2rem;
        padding: 2rem 4rem;
    }
}

/* Modal Callout */
.modalCallout {
    padding: 2rem 2rem 4rem;
    background-color: hsl(210, 100%, 21%);
}

.modalCalloutContent {
    max-width: 1344px;
    margin: 0 auto;
    color: white;
    font-family: 'Mallory', sans-serif;
}

.modalCalloutContent p {
    font-size: 1.2rem;
    max-width: 80ch;
}

.modalCalloutContent h2 {
    font-family: 'YaleNew', serif;
    color: white;
}

.modalCalloutContent button {
    font-size: 1.2rem;
    font-weight: 600;
    background: transparent;
    color: white;
    border: none;
    padding: 1rem 2rem;
    cursor: pointer;
    border: 0.25rem solid white;
    transition: all 200ms ease-in-out;
}

.modalCalloutContent button:hover {
    background: white;
    color: hsl(210, 100%, 21%);
    border-color: white;
}

/* .header {
    padding: 1rem;
    border: 1px solid red;
}

@media screen and (min-width:800px) {
    .header {
        padding: 2rem 4rem;
    }
} */

.headerContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
}

.headerTitleContainer {
    display: flex;
    align-items: center;
    margin-left: 14px;
    text-decoration: none;
}

.headerTitle {
    font-style: normal;
    font-weight: 800;
    font-size: 2rem;
    line-height: 1.2;
    display: flex;
    align-items: flex-end;
    color: hsl(210, 100%, 21%);
    max-width: 130px;
}

.headerIcon {
    height: 32px;
    width: 32px;
    margin-left: 36px;
}

.urlTextBox {
    font-style: normal;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1;
    color: #707070;
    border: 1px solid #D1D1D1;
    border-radius: 4px;
}

.copyButtonContainer {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 5px 12px;
    gap: 4px;
    background: #FFFFFF;
    border: 1px solid #D1D1D1;
    border-radius: 4px;
}

button.closeButton {
    background-color: transparent;
    border: #286DC0 1px solid;
    border-radius: 2px;
    fill: #286DC0;
    transition: all 0.15s;
    padding: 1rem;
    line-height: 0;
    height: 35px;
    display: flex;
    align-items: center;
}

button.closeButton:hover {
    background: rgba(255, 255, 255, 0.7);
}

button.closeButton:focus-visible {
    outline: 1px solid #222;
}

